# Rag_Chat_CustomerService-demo-

./: .gitignore  Makefile  README.md  app.py  rag_chat_bot.ipynb
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  prompts.py  rag.py
backend/scripts/: __init__.py  rebuild_index.py
faiss_index/: index.faiss  index.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
